[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/objects/Just_arrow.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Hurtbox_Hitbox/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Objects/Projectiles/EnemyGun.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.75, 1.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.5, 3.5 )

[node name="EnemyGun" type="Area2D" groups=["enemy_gun"]]
collision_layer = 4112
collision_mask = 8
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -1.19209e-07 )
scale = Vector2( 0.3, 0.2 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 64
damage = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_EnemyGun_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyGun_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]
